# ARC-STUDIO

./: .dockerignore  .env  .env.example  .gitignore  .lintstagedrc.json  .phase2_complete_manifest.txt  .prettierignore  .tool-versions  AGENTS.md  AUTOMATION_PROMPT.md  CHANGELOG.md  COMMIT_PHASE_34.2_PROMPT.md  CONTRIBUTING.md  Dockerfile  GENSOR_HANDOVER.md  GENSPARK_PHASE6_HANDOVER.md  HANDOVER_TO_GENSPARK.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LOCAL_CLI_PROMPT.md  MERGE_NOTES.md  NEXT_PHASE_34.2_PROMPT.md  PHASE-2-REREVIEW-REQUEST.md  PHASE-3-HANDOFF.txt  PHASE-3-READY.md  PHASE-3-STASH-RECOVERY.md  PHASE2_CONTINUE.md  PHASE2_PROMPT.md  PHASE_18_REPORT.md  PHASE_2_FINAL_REPORT.txt  PHASE_2_INDEX.md  PHASE_5_PERFORMANCE_REPORT.md  POST_MERGE_REVIEW.md  PROMPT_PHASE_2_REVIEW.md  README.md  REFRESH_AND_REVIEW_PROMPT.md  REVIEW_PHASE_18.md  SECURITY_AUDIT_REPORT.md  SESSION_HANDOFF.md  (+18 more)
python/: .coverage  .gitignore  README.md  coverage.xml  pyproject.toml  test_security_manual.py
python/.arc/: aliases.json  arc.db  battles.db  hitl.db  tasks.db
python/.arc/plans/: plan-01a288db63d8.json  plan-0352377c5f48.json  plan-05e0f211687c.json  plan-06b8206957c1.json  plan-06ee3a819528.json  plan-07cb9f14354c.json  plan-088371c4a267.json  plan-08c79cbb63bf.json  plan-0b07a9e9f861.json  plan-0c5b4094a9ea.json  plan-0d3fff31bd1d.json  plan-0fb1f52fc3d6.json  plan-0fcb85eebf54.json  plan-105876b10f29.json  plan-1aa6164e4d19.json  plan-1afb40b11f75.json  plan-1e23afadf66e.json  plan-1e5c10123292.json  plan-1ef462467802.json  plan-1f23ebd4ec1f.json  plan-1f2b86db93ee.json  plan-21a1e20ec8ca.json  plan-21a61aaf7879.json  plan-222d00a7f740.json  plan-22590de686c1.json  plan-22a28ee8406b.json  plan-267e963280be.json  plan-26a6828055b4.json  plan-26bae01d0a72.json  plan-27594d149316.json  plan-27a53fa98e03.json  plan-29705dc44efb.json  plan-2993e017e262.json  plan-29d6dad6879b.json  plan-2b1edbd8324c.json  plan-2c756b703b34.json  plan-2e1cc79d6362.json  plan-2ec74858d67a.json  plan-331e3b23aae3.json  plan-3540ed18b973.json  (+175 more)
python/.arc/traces/: run-sg-8c35866a.jsonl
python/benchmarks/: README.md  __init__.py  pytest.ini  test_adapter_detection.py  test_adapter_registry.py  test_adapter_workflows.py
python/examples/adapters/: 01_basic_detection.py  02_multi_adapter_detection.py  03_workflow_inspection.py  04_custom_adapter.py  05_registry_usage.py  README.md  _adapter_loader.py
python/scripts/: build-daemon.sh
python/src/: __init__.py  routes.py  security_utils.py  test_security.py
python/src/agent_runtime_cockpit/: __daemon_main__.py  __init__.py  _legacy_cli.py  budget.py  ci_orchestration.py  cli.py  cli_studio.py  daemon.py  gating.py  mobile_sdk_mapping.py  provider_action.py  providers.py  workspace.py
python/src/swarmgraph/: __init__.py
python/tests/: conftest.py  test_active_stream.py  test_adapter_status.py  test_adapters.py  test_adapters_static.py  test_adoption_protocol.py  test_advisory_lock.py  test_advisory_lock_b2p13.py  test_agui_bridge.py  test_audit_event_schema.py  test_budget_enforcer.py  test_capabilities.py  test_capability_snapshot.py  test_cli_batch.py  test_cli_doctor.py  test_cli_edit_loop.py  test_cli_profiles_workspace.py  test_cli_providers.py  test_cli_repl.py  test_cli_repl_runtime.py  test_cli_repl_ui.py  test_cli_runs.py  test_cli_sandbox.py  test_cli_storage.py  test_cli_studio.py  test_config.py  test_context.py  test_context_r85.py  test_daemon_build.py  test_electron_packaging_b2p17.py  test_eval_synthetic_labelling.py  test_event_parity.py  test_event_schema.py  test_evidence_refs.py  test_failure_autopsy.py  test_fallback_wiring.py  test_gate_check_alias.py  test_harden_jsonl.py  test_harden_retry.py  test_index_r84.py  (+73 more)
python/tests/a2a/: __init__.py  test_client.py  test_generator.py  test_models.py
python/tests/adapters/: test_ag_ui_mappings.py  test_agno.py  test_arc_runtime_sdk.py  test_arc_runtime_sdk_pack.py  test_arc_runtime_sdk_protocol.py  test_browser_use.py  test_budget_checkpoint.py  test_crewai_run.py  test_langgraph_run.py  test_letta.py  test_lmarena_adapter.py  test_openai_agents.py  test_pydantic_ai_adapter.py  test_run_budget_scope.py  test_shared_helpers.py  test_strands.py  test_swarmgraph_ide_event_contract.py
python/tests/advisor/: test_advisor_r94.py
python/tests/arena/: test_arena_integration.py  test_arena_models.py  test_arena_service.py
python/tests/audit/: test_hitl.py  test_hmac_chain.py  test_redaction.py  test_run_keyed_audit.py  test_runner_integration.py  test_schema.py  test_session.py  test_storage.py  test_streaming_verifier.py  test_verifier_with_bypass_warnings.py
python/tests/auth/: test_auth_manager.py  test_auth_oauth.py  test_cli_auth.py
python/tests/battle/: __init__.py  test_battle_escrow.py  test_battle_hitl.py  test_battle_models.py  test_battle_replay.py  test_battle_runner.py  test_battle_store.py
python/tests/budget/: test_harden_budget.py  test_persistence.py  test_token_wallet.py
python/tests/capabilities/: __init__.py  conftest.py  test_enforcement.py  test_from_ir.py  test_hashing.py  test_models.py  test_policy.py  test_redaction.py  test_signing.py  test_validation.py
python/tests/cli/: conftest.py  test_audit_query.py  test_battle_cli.py  test_ci.py  test_cli_arena.py  test_cli_discoverability.py  test_cli_error_paths.py  test_cli_eval.py  test_cli_run_gating.py  test_cli_runs.py  test_cli_runtimes_diff.py  test_cli_serve.py  test_cli_smoke.py  test_cli_snapshots.py  test_cockpit_receipts.py  test_diff_apply.py  test_events_cli.py  test_git_native.py  test_isolation_selector_cli.py  test_r86_r87_r88_r89_dod.py  test_task_cli.py  test_testbench.py  (+3 more)
rust/: Cargo.toml  deny.toml
rust/arc-daemon-client/: Cargo.toml
rust/arc-dock/: Cargo.toml
rust/arc-editor/: Cargo.toml
rust/arc-index/: Cargo.toml
rust/arc-plugin-host/: Cargo.toml
rust/arc-protocol-rs/: Cargo.toml
rust/arc-shell/: Cargo.toml
rust/arc-terminal/: Cargo.toml
rust/arc-ui/: Cargo.toml
rust/arc-workspace/: Cargo.toml
rust/spikes/: CANDIDATES.md  Cargo.toml
(+1898 files in other folders)
