[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-runtime-cockpit"
version = "0.1.0a0"
description = "ARC — Agent Runtime Cockpit: Python daemon, adapters, context retrieval"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "ARC Studio Contributors" }]
keywords = ["agent", "runtime", "ide", "theia", "swarmgraph", "langgraph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13.7",
    "aiohttp>=3.14.0",
    "aiofiles>=23.2",
    "idna>=3.15",
    "PyYAML>=6.0",
    "tiktoken>=0.8",
    "mcp>=1.0.0",
    "swarmgraph-sdk",
    "textual>=0.80",
    "pygments>=2.17",
]

[project.optional-dependencies]
swarmgraph = []
langgraph = ["langgraph>=0.2"]
context = ["httpx>=0.27"]
optimizer = ["tiktoken>=0.12"]
docker = ["docker>=7.1"]
arena = ["openai>=1.0", "anthropic>=0.30"]
vz = ["pyobjc-framework-Virtualization>=10.0; platform_system == 'Darwin'"]
all = ["agent-runtime-cockpit[langgraph,context,optimizer,docker,arena]"]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-textual-snapshot>=0.4",
    "pytest-benchmark>=4.0",
    "httpx>=0.27",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "mypy>=1.10",
    "pip-audit>=2.7",
    "pyinstaller>=6.0",
]

[project.scripts]
arc = "agent_runtime_cockpit.cli:app"
arc-studio = "agent_runtime_cockpit.cli_studio:app"
arch-studio-cli = "agent_runtime_cockpit.cli_studio:app"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_runtime_cockpit"]

[tool.uv]
# Force a patched pip: PYSEC-2026-196 affects pip 26.1.1 (fixed in 26.1.2).
# pip is only a transitive/dev tool here, but this keeps `pip-audit` clean in CI.
constraint-dependencies = ["pip>=26.1.2"]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
swarmgraph-sdk = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "benchmark: marks tests as benchmarks (off-gate, not required for CI)",
    "needs(dep): mark test as requiring a specific CLI subcommand or fixture",
    "real_runtime: opt-in smoke tests for real runtime imports/integration",
    "slow: marks tests as slow-running (can be skipped with -m 'not slow')",
]
filterwarnings = [
    # Transitive LangGraph warning until upstream resolves allowed_objects default.
    "ignore:.*allowed_objects.*",
    # Ignore resource warnings from unclosed sockets in test cleanup
    "ignore::ResourceWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
    # Ignore intentional deprecation warnings for legacy runtime mode migration
    "ignore:Legacy runtime mode.*:DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E701/E702: multiple-statement-per-line style is intentional in tight loops
#   and compact class declarations (ag2/runner.py, test_streaming.py)
# E741: ambiguous variable name 'l' is accepted in short list comprehensions
#   (audit/chain.py, test_real_execution.py)
ignore = ["E701", "E702", "E741"]
extend-select = ["TID251"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"agent_runtime_cockpit.swarmgraph.adaptive_consensus".msg = "Use swarmgraph public API or update test_arc_sdk_boundary.py intentionally."
"agent_runtime_cockpit.swarmgraph.adapters".msg = "Use swarmgraph public API or update test_arc_sdk_boundary.py intentionally."
"agent_runtime_cockpit.swarmgraph.checkpoint".msg = "Use swarmgraph public API or update test_arc_sdk_boundary.py intentionally."
"agent_runtime_cockpit.swarmgraph.cli".msg = "Use swarmgraph public API or update test_arc_sdk_boundary.py intentionally."
"agent_runtime_cockpit.swarmgraph.config".msg = "Use swarmgraph public API or update test_arc_sdk_boundary.py intentionally."
"agent_runtime_cockpit.swarmgraph.consensus".msg = "Use swarmgraph public API or update test_arc_sdk_boundary.py intentionally."
"agent_runtime_cockpit.swarmgraph.consensus_escrow".msg = "Use swarmgraph public API or update test_arc_sdk_boundary.py intentionally."
"agent_runtime_cockpit.swarmgraph.decomposition".msg = "Use swarmgraph public API or update test_arc_sdk_boundary.py intentionally."
"agent_runtime_cockpit.swarmgraph.detectors".msg = "Use swarmgraph public API or update test_arc_sdk_boundary.py intentionally."
"agent_runtime_cockpit.swarmgraph.events".msg = "Use swarmgraph public API or update test_arc_sdk_boundary.py intentionally."
"agent_runtime_cockpit.swarmgraph.fixtures".msg = "Use swarmgraph public API or update test_arc_sdk_boundary.py intentionally."
"agent_runtime_cockpit.swarmgraph.graph".msg = "Use swarmgraph public API or update test_arc_sdk_boundary.py intentionally."
"agent_runtime_cockpit.swarmgraph.models".msg = "Use swarmgraph public API or update test_arc_sdk_boundary.py intentionally."
"agent_runtime_cockpit.swarmgraph.nodes.approval".msg = "Use swarmgraph public API or update test_arc_sdk_boundary.py intentionally."
"agent_runtime_cockpit.swarmgraph.nodes.consensus".msg = "Use swarmgraph public API or update test_arc_sdk_boundary.py intentionally."
"agent_runtime_cockpit.swarmgraph.nodes.queen".msg = "Use swarmgraph public API or update test_arc_sdk_boundary.py intentionally."
"agent_runtime_cockpit.swarmgraph.nodes.worker".msg = "Use swarmgraph public API or update test_arc_sdk_boundary.py intentionally."
"agent_runtime_cockpit.swarmgraph.providers".msg = "Use swarmgraph public API or update test_arc_sdk_boundary.py intentionally."
"agent_runtime_cockpit.swarmgraph.risk_assessment".msg = "Use swarmgraph public API or update test_arc_sdk_boundary.py intentionally."
"agent_runtime_cockpit.swarmgraph.runner".msg = "Use swarmgraph public API or update test_arc_sdk_boundary.py intentionally."
"agent_runtime_cockpit.swarmgraph.state".msg = "Use swarmgraph public API or update test_arc_sdk_boundary.py intentionally."

[tool.ruff.lint.per-file-ignores]
"src/agent_runtime_cockpit/tui/**/*.py" = ["TID251"]
"src/agent_runtime_cockpit/cli/exec.py" = ["TID251"]
"src/agent_runtime_cockpit/adapters/swarmgraph.py" = ["TID251"]
"src/agent_runtime_cockpit/battle/runner.py" = ["TID251"]
"src/agent_runtime_cockpit/cli/swarmgraph.py" = ["TID251"]
"src/agent_runtime_cockpit/cli_repl/chat_repl.py" = ["TID251"]
"src/agent_runtime_cockpit/cli_repl/slash_commands.py" = ["TID251"]
"src/agent_runtime_cockpit/evals/consensus.py" = ["TID251"]
"tests/test_swarmgraph_native.py" = ["TID251"]
"tests/swarmgraph/test_*.py" = ["TID251"]
"tests/adapters/swarmgraph/test_security.py" = ["TID251"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.coverage.report]
fail_under = 70
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
