[workspace]
resolver = "2"
members = [
    "arc-protocol-rs", "arc-daemon-client", "arc-ui", "arc-shell",
    "arc-editor", "arc-dock",
    "arc-workspace", "arc-index", "arc-terminal",
    "arc-plugin-host",
] # grows per sprint

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
tokio = { version = "1.45", features = ["rt-multi-thread", "macros", "net", "process", "time", "signal", "io-util"] }
tokio-util = { version = "0.7.15" }
reqwest = { version = "0.12.15", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3.31"
thiserror = "2.0.12"
tracing = "0.1.41"

[workspace.lints.clippy]
unwrap_used = "deny" # daemon-facing code must use structured errors
