[package]
name = "arc-daemon-client"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false
description = "HTTP+SSE client for the ARC daemon (Sprint 1); UDS JSON-RPC later, flag-gated"

[dependencies]
arc-protocol-rs = { path = "../arc-protocol-rs" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { version = "1.45", features = ["full"] }

[lints]
workspace = true
