[package]
name = "arc-protocol-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Typed ARC protocol bridge: ArcEnvelope, RunEvent, fixture conformance (Sprint 1)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
