[package]
name = "arc-shell"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false
description = "ARC Studio v2 native shell (Sprint 2: headless skeleton — window rendering lands with the Sprint-3 framework decision)"

[features]
default = []
framework-gpui = ["arc-ui/framework-gpui"]

[dependencies]
arc-ui = { path = "../arc-ui" }
arc-protocol-rs = { path = "../arc-protocol-rs" }
arc-daemon-client = { path = "../arc-daemon-client" }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
