[package]
name = "arc-ui"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false
description = "ARC v2 UI facade — the ONLY crate allowed to depend on a UI framework (improvement #1)"

[features]
# Headless stays the default everywhere (flag off = today's headless build).
default = []
# Sprint-3 selection: gpui 0.2.2. Feature off = headless; on = framework enabled.
# floem entry stays as the tested escape (≤3-day re-port per adjudication §3).
framework-gpui  = ["dep:gpui"]
# framework-floem = ["dep:floem"]  # escape hatch — kept, not deleted

[dependencies]
nucleo-matcher = "0.3.1"
thiserror = { workspace = true }
gpui = { version = "=0.2.2", optional = true }

[lints]
workspace = true
