[package]
name = "arc-workspace"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false
description = "ARC v2 workspace model (Sprint 5): worktree scan, ignore rules, debounced watcher — framework-free"

[dependencies]
notify = "8.2.0"
notify-debouncer-full = "0.6.0"
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.20"

[lints]
workspace = true
